@@ -29,6 +29,9 @@ Revision history for autodie
         * TEST: Expanded tests to ensure autodie::exception returns
           the correct line number and caller.
 
+        * TEST: Expanded tests to ensure autodie::exception returns
+          correct information when calling subroutines in external files.
+
 1.998 Sat Jan  3 11:19:53 AUSEDT 2009
 
         * BUILD: Removed Module::AutoInstall, which previously
